--- a/src/components/Calculator/Calculator.scss
+++ b/src/components/Calculator/Calculator.scss
@@ -31,14 +31,19 @@
 				position: relative;
 
 				span {
+					align-items: center;
+					background: #333;
+					border-radius: 50%;
+					font-size: 45px;
+					transition: filter 0.3s ease-in;
 					height: 100%;
 					width: 100%;
 					display: flex;
 					justify-content: center;
 					align-items: center;
-                    position: absolute;
-                    border: 1px solid black;
-                    cursor: pointer;
+					position: absolute;
+					border: 1px solid black;
+					cursor: pointer;
 				}
 			}
 		}
